--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.0",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.33",
     "react": "^18.3.1",
